--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PayList</string>
+    <string name="hint_num_codes">Input Numeric Code</string>
+    <string name="explanation">Explanation Numeric Codes</string>
+    <string name="button_text">Find</string>
 </resources>
